# rust-os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: acpi.rs  allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  rtl8139.rs  serial.rs  time.rs  vga_buffer.rs
src/drivers/net/: mod.rs  rtl8139.rs
src/networking/: mod.rs
src/networking/socket/: icmp.rs  mod.rs  tcp.rs
src/task/: executor.rs  keyboard.rs  mod.rs  network.rs  shell.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
