[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = { version = "0.9.8", features = ["lazy"] }
generic_once_cell = "0.1.1"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"
acpi = "4.1.1"
smoltcp = { version = "0.9.1", default-features = false, features = ["alloc", "socket-icmp", "proto-ipv4", "medium-ethernet"] }
byteorder = { version = "1.4.3", default-features = false }
futures = { version = "0.3.28", default-features = false }

[package.metadata.bootimage]
run-args = ["-netdev", "user,id=network0", "-device", "rtl8139,netdev=network0", "-object", "filter-dump,id=f1,netdev=network0,file=dump.dat"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
